# k8s-job-dispatcher

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
src/: api_error.rs  default_filter.jq  health_service.rs  ir_to_manifest.jq  jq.rs  k8s_service.rs  main.rs  openapi.json  request_to_ir.jq  state.rs
