[package]
name = "k8s-job-dispatcher"
version = "0.3.1"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["env", "derive"] }
cuid2 = "0.1.2"
itertools = "0.12.0"
jaq-core = { git = "https://github.com/01mf02/jaq.git", tag = "v1.2.0" }
jaq-interpret = { git = "https://github.com/01mf02/jaq.git", tag = "v1.2.0" }
jaq-parse = { git = "https://github.com/01mf02/jaq.git", tag = "v1.2.0" }
jaq-std = { git = "https://github.com/01mf02/jaq.git", tag = "v1.2.0" }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.87.1", features = ["runtime", "derive"] }
md5 = "0.7.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha1 = "0.10.6"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
