[package]
name = "k8s-job-dispatcher"
version = "0.4.3"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["env", "derive"] }
cuid2 = "0.1.2"
itertools = "0.13.0"
jaq-core = { git = "https://github.com/01mf02/jaq.git", tag = "v1.4.0" }
jaq-interpret = { git = "https://github.com/01mf02/jaq.git", tag = "v1.4.0" }
jaq-parse = { git = "https://github.com/01mf02/jaq.git", tag = "v1.4.0" }
jaq-std = { git = "https://github.com/01mf02/jaq.git", tag = "v1.4.0" }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube = { version = "0.91.0", features = ["runtime", "derive"] }
md5 = "0.7.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha1 = "0.10.6"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
utoipa-rapidoc = { version = "4.0.0", features = ["actix-web"] }
